--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@capacitor/android": "^5.7.0",
+    "@capacitor/core": "^5.7.0",
+    "@capacitor/filesystem": "^5.2.1",
+    "@capacitor/ios": "^5.7.0",
     "latest": "^0.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
+    "@capacitor/cli": "^5.7.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
